cabal-version: 3.0
name:          site
version:       0.0.0.0
build-type:    Simple
default-language: Haskell2010

executable site
  main-is:       Main.hs
  hs-source-dirs: src

  -- cabal-fmt: expand src

  build-depends:
    , base
    , hakyll

  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
